Editor visual able to trigger action